freshed-rs-macros/tests/ui/fail/async_marker_in_html_in.stderr
error: async component marker is only supported in html_async! and html_async_ctx!
  --> tests/ui/fail/async_marker_in_html_ctx.rs:18:37
   |
18 |     let _ = html_ctx!(ctx, <UserCard async>{"x"}</UserCard>);
   |                                     ^^^^^
